# zfs-tools

./: .gitignore  .project  .pydevproject  Jenkinsfile  MANIFEST.in  Makefile  README  README.md  TODO  build.parameters  fetch  mypy.ini  setup.cfg  setup.py  sudoers.zfs  test_zfslib.py  tox.ini  zfs-fetch-pool  zfs-shell  zfs-tools.spec  zfslib.py  zfsrecvsh  zmirror  zreplicate  zsnap
contrib/: sudoers.zfs-tools  transfer-zfs-filesystem
debian/: README  README.Debian  README.source  changelog  control  copyright  postrm  zfs-shell.install  zfs-shell.postinst  zfs-tools.install
doc/: README-zbackup.md
src/zfs_tools/: connection.py  models.py  sync.py  test_sync.py  test_util.py  zbackup.py  zflock.py  zreplicate.py  zsnap.py
src/zfstools/: connection.py  models.py  sync.py  test_sync.py  test_util.py  util.py  zbackup.py  zflock.py  zreplicate.py  zsnap.py
