[metadata]
name = zfs-tools
version = attr: zfs_tools.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = ZFS synchronization and snapshotting tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/zfs-tools
license = GPLv2
classifiers =
    Development Status :: 5 - Production/Stable'
    Environment :: Console'
    Environment :: No Input/Output (Daemon)'
    Intended Audience :: System Administrators'
    License :: OSI Approved :: GNU General Public License (GPL)'
    Operating System :: POSIX :: Linux'
    Programming Language :: Python :: 3 :: Only'
    Programming Language :: Python :: 3.7'
    Topic :: System :: Filesystems'
    Topic :: Communications :: File Sharing'
    Topic :: System :: Archiving :: Backup'
    Topic :: System :: Archiving :: Mirroring'
    Topic :: Utilities'
    keywords = ZFS filesystems backup synchronization snapshot

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zbackup = zfs_tools.zbackup:main
    zflock = zfs_tools.zflock:main
    zreplicate = zfs_tools.zreplicate:main
    zsnap = zfs_tools.zsnap:main
